tests/errors/test_30.x
// Identifier declared void[]


fn main() -> i64 {

    let x: void[];
}